src/tests/snapshots/cargo_vet__tests__vet__builtin-simple-no-unaudited.json.snap
---
source: src/tests/vet.rs
expression: json
---
{
  "conclusion": "fail (vetting)",
  "failures": [
    {
      "name": "third-party1",
      "version": "10.0.0",
      "missing_criteria": [
        "safe-to-deploy"
      ]
    },
    {
      "name": "third-party2",
      "version": "10.0.0",
      "missing_criteria": [
        "safe-to-deploy"
      ]
    }
  ],
  "suggest": {
    "suggestions": [
      {
        "name": "third-party1",
        "notable_parents": "first-party",
        "suggested_criteria": [
          "safe-to-deploy"
        ],
        "suggested_diff": {
          "from": null,
          "to": "10.0.0",
          "diffstat": {
            "insertions": 100,
            "deletions": 0,
            "files_changed": 1
          }
        }
      },
      {
        "name": "third-party2",
        "notable_parents": "first-party",
        "suggested_criteria": [
          "safe-to-deploy"
        ],
        "suggested_diff": {
          "from": null,
          "to": "10.0.0",
          "diffstat": {
            "insertions": 100,
            "deletions": 0,
            "files_changed": 1
          }
        }
      }
    ],
    "suggest_by_criteria": {
      "safe-to-deploy": [
        {
          "name": "third-party1",
          "notable_parents": "first-party",
          "suggested_criteria": [
            "safe-to-deploy"
          ],
          "suggested_diff": {
            "from": null,
            "to": "10.0.0",
            "diffstat": {
              "insertions": 100,
              "deletions": 0,
              "files_changed": 1
            }
          }
        },
        {
          "name": "third-party2",
          "notable_parents": "first-party",
          "suggested_criteria": [
            "safe-to-deploy"
          ],
          "suggested_diff": {
            "from": null,
            "to": "10.0.0",
            "diffstat": {
              "insertions": 100,
              "deletions": 0,
              "files_changed": 1
            }
          }
        }
      ]
    },
    "total_lines": 200
  }
}
