src/tests/snapshots/cargo_vet__tests__vet__builtin-simple-unaudited-extra.snap
---
source: src/tests/vet.rs
expression: output
---
Vetting Succeeded (2 fully audited, 1 exempted)

