src/tests/snapshots/cargo_vet__tests__vet__builtin-simple-unaudited-in-direct-full.snap
---
source: src/tests/vet.rs
expression: output
---
Vetting Succeeded (3 fully audited)
  warning: some dependencies are listed in unaudited, but didn't need it:
    third-party1:10.0.0

